// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Header correctly when inGame is false 1`] = `
<div
  className="header-container"
>
  <div
    className="header-side"
  >
    <div
      className="link"
    >
      <NavLink
        activeClassName="active-link"
        exact={true}
        to="/"
      >
        Play
      </NavLink>
    </div>
  </div>
  <div
    className="header-center"
  >
    <NavLink
      to="/about/"
    >
      <div
        className="header-logo"
        title="About Bandfeud"
      >
        <img
          alt="BandFeud"
          src="/images/bf_c.svg"
        />
      </div>
    </NavLink>
  </div>
  <div
    className="header-side"
  >
    <div
      className="link"
    >
      <NavLink
        activeClassName="active-link"
        to="/highscores/"
      >
        Highscores
      </NavLink>
    </div>
  </div>
</div>
`;

exports[`should render Header correctly when inGame is true 1`] = `
<div
  className="header-container"
>
  <div
    className="header-side"
  />
  <div
    className="header-center"
  >
    <div
      className="header-logo-link"
      title="About Bandfeud"
    >
      <img
        alt="BandFeud"
        src="/images/bf_c.svg"
      />
    </div>
  </div>
  <div
    className="header-side"
  >
    <div
      className="score"
    >
      Score: 
    </div>
  </div>
</div>
`;
